handling upload html and flask endpoint. TODO: user verification

--- a/templates/test.html
+++ b/templates/test.html
@@ -4,12 +4,10 @@
 <title>{{name}} - SoundCloud</title>
 </head>
 <body>
-  <h1> Welcome, {{name}}! </h1>
+  <h1> Welcome, {{username}}! </h1>
   <h2> My Tracks</h2>
   <audio controls>
-    <!-- sadasd -->
     <source src="{{song}}" type="audio/mpeg">
-
     Your browser does not support the audio element.
   </audio> 
 </body>
