added upload song to mongodb endpoint, next render the music for the user

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{{name}} - SoundCloud</title>
+<title>{{username}} - SoundCloud</title>
 </head>
 <body>
   <h1> Welcome, {{username}}! </h1>
