update wrap audio file into http audio response

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -10,7 +10,7 @@
         <label for="username">username</label><br>
         <input type="text" name="username" required><br>
         <p>Click on the "Choose file" button to upload a file:</p>
-        <input type="file" name="music_file" accept= ".mp3">
+        <input type="file" name="music_file" accept= ".mp3" required>
       <input type="submit">
     </form>
 
