added a base template html. TODO: add login

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>SoundCloud</title>
-</head>
-<body>
-  <h1>Welcome to SoundCloud, Let's have some fun!</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+
+<h1>Hi Stranger, Welcome to Vangel!</h1>
+<h2>Enjoy the music</h2>
+
+{% endblock %}
