--- a/templates/test.html
+++ b/templates/test.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>{{username}} - SoundCloud</title>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block content %}
+
   <h1> Welcome, {{username}}! </h1>
   <h2> My Tracks</h2>
   <ol>
@@ -19,10 +17,8 @@
     {% endfor%}
     
   </ol>
-</body>
-</html>
 
-
+{% endblock %}
 <!-- 
     foe only one song
     <audio controls>
