--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,21 +13,32 @@
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <ul class="navbar-nav">
-      <li class="nav-item">
+        {% if g.user %}
+        <li class="nav-item">
+            <a class="nav-link" href=".index.html">HOME</a>
+        </li>
+        <li><span>{{ g.user['name'] }}</span>
+        <li><a href="{{ url_for('logout') }}">Log Out</a>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('/')g.user['name']}}">Profile</a>
+        </li>
+
+        {% else %}
+        <li class="nav-item">
         <a class="nav-link" href=".index.html">HOME</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Discovery</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
-      </li>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{{login}}">Login</a>
+        </li>
     </ul>
   </nav>
   <br>
   <div class = "container-fluid top-container" style="margin-top:80px">
-      {% block content %}
+    {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+    {% endfor %}
 
+      {% block content %}
       {% endblock %}
   </div>
 
