--- a/templates/test.html
+++ b/templates/test.html
@@ -25,4 +25,13 @@
     <source src="{{song}}" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio> 
+
+
+  dynamic link with url_for
+      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+    {% else %}
+      <li><a href="{{ url_for('auth.register') }}">Register</a>
+      <li><a href="{{ url_for('auth.login') }}">Log In</a>
+ 
+
 -->
