fixed flash msg in html, testing login/logout func

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 
-{% block content %}
+{% block header %}
+  {% block title %} Music Heaven - Vangle {% endblock %}
+{% endblock %}
 
+{% block content %}
 <h1>Hi Stranger, Welcome to Vangel!</h1>
 <h2>Enjoy the music</h2>
-
 {% endblock %}
