--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,20 +17,25 @@
     <ul class="navbar-nav">
         {% if g.user %}
         <li class="nav-item">
-            <a class="nav-link" href=".index.html">HOME</a>
+            <a class="nav-link" href="{{url_for('show_index')}}">HOME</a>
         </li>
-        <li><span>{{ g.user['username'] }}</span>
-        <li><a href="{{ url_for('logout') }}">Log Out</a>
         <li class="nav-item">
-            <a class="nav-link" href="{{url_for('/')}}g.user['name']">Profile</a>
+            <a class="nav-link" href="{{url_for('show_profile', username=g.user['username'])}}">Profile</a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
         </li>
 
         {% else %}
         <li class="nav-item">
-        <a class="nav-link" href=".index.html">HOME</a>
+        <a class="nav-link" href="{{url_for('show_index')}}">HOME</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('register') }}">Register</a>
         </li>
         {% endif %}
     </ul>
@@ -38,8 +43,6 @@
   <br>
 
   <div class = "container-fluid top-container" style="margin-top:80px">  
-      {% block content %}
-      {% endblock %}
       {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes style="margin-top: 20px;">
@@ -49,6 +52,9 @@
         </ul>
       {% endif %}
       {% endwith %}
+
+      {% block content %}
+      {% endblock %}
     </div>
 
 
