--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,7 +11,7 @@
         <label for="track title">Track Title</label><br>
         <input type="text" name="track title" required><br>
         <p>Click on the "Choose file" button to upload the audio track file:</p>
-        <input type="file" name="music_file" accept= ".mp3" required>
+        <input type="file" name="music_file" accept= "audio/*" required>
       <input type="submit">
     </form>
 {% endblock %}
