--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,21 +6,25 @@
 
 {% block content %}
 
-  <h1> Welcome back! {{username}} </h1>
+  <h1> {{username}} </h1>
   <h2> Tracks</h2>
 
-  {% if g.user %}
+  {% if g.user['username'] == username %}
   <a class ='action' href="{{url_for('upload')}}">Upload</a>
   {% endif %}
 
-  <ul style="margin-top: 1%;">
-    {% for sound_track_title, sound_track_obj_id in sound_track_list %}
+  <ul>
+    {% for track in tracks %}
       <li>
-        <p>{{sound_track_title}}</p>
+        <p>{{track['filename']}}</p>
+        {% if g.user['_id'] == track['artist_id'] %}
+        <form id="delete_track" action="{{ url_for('delete', music_file_id=track['_id'])}}" 
+          method="POST">
+          <input type="submit" value="Delete" />
+        </form>
+        {% endif %}
         <audio controls>
-          <source src="{{url_for('fetch_music', music_file_id=sound_track_obj_id)}}" type="audio/mpeg">
-
-              Your browser does not support the audio element.
+          <source src="{{url_for('fetch_music', music_file_id=track['_id'])}}" type="audio/mpeg">
         </audio>
       </li>
     {% endfor%}
@@ -28,5 +32,10 @@
 
 {% endblock %}
 
+{% block javascript %} 
+
+
+{% endblock %}
 
 <!-- <source src="{{sound_track_obj_id}}" type="audio/mpeg"> -->
+
