--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block header %}
-  {% block title %}Log In{% endblock %}
+  {% block title %}Login{% endblock %}
 {% endblock %}
 
 {% block content %}
